trunk/Archive2/dd/4a38dd6dd0daa9/output
main.cpp: In constructor 'Y::Y()':
main.cpp:8:5: error: uninitialized reference member in 'struct X&&' [-fpermissive]
     Y(){ }
     ^
main.cpp:7:9: note: 'X&& Y::x' should be initialized
     X&& x;
         ^
main.cpp: At global scope:
main.cpp:14:7: error: use of deleted function 'Y::Y(const Y&)'
 Y b = a;
       ^
main.cpp:9:5: note: 'Y::Y(const Y&)' is implicitly deleted because the default definition would be ill-formed:
     Y(Y const&)= default;
     ^
main.cpp:9:5: error: copying non-static data member 'X&& Y::x' of rvalue reference type
